--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ height: auto;
 width: 100%;
 }
 .slides{
-  background:url(/images/2880x1440.jpg);
+  background:url(2880x1440.jpg);
 width: 100%;
 height: 100vh;
 background-repeat: round;
